<?xml version="1.0" encoding="utf-8"?><!--
  ~ TianTan (天探)
  ~ Copyright (C) 2022  Astronomy Group, Class 1 Senior 1, Wujiang High School (吴江中学（原）高一（1）班天文小组)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">天探</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="app_full_name">天探——天体探索者</string>
    <string name="author">作者</string>
    <string name="title_activity_settings">设置</string>

    <!-- 主页选项 -->
    <!--string-array name="mainpagelistcell_name">
        <item>天体介绍</item>
        <item>答题竞赛</item>
    </string-array>

    <string-array name="mainpagelistcell_description">
        <item>介绍太阳系内各天体</item>
        <item>随机抽取五道选择题，请认真作答</item>
    </string-array-->

    <string name="name">名称</string>
    <string name="description">描述</string>
    <string name="notrealized">该功能尚未实现。</string>
    <string name="version">版本</string>
    <string name="author_info">吴江中学（原）高一（1）班天文小组</string>
    <string name="copyright_description">版权所有 \u00a9 2022 吴江中学（原）高一（1）班天文小组\n</string>
    <string name="gplv3_description">天探是在GNU通用公共许可证（第3版）下发布的开源软件。</string>
    <string name="worker_description">资料搜集：黄翰庆、刘陈杰\n软件开发：张智鹏</string>
    <string name="testing_edition">测试版本</string>
    <string name="using_3rd_party_library">使用的第三方库：\nGson 2.9.0 (Apache License 2.0 | https://github.com/google/gson)</string>

    <string-array name="version_description" translatable="false">
        <item>自测版本</item>
        <item>此版本为内测版本，不建议转发给组外人员。</item>
        <item>此版本为公测版本，不建议转发给班级外人员。</item>
        <item>欢迎使用！在这里您将了解太阳系内天体知识。</item>
    </string-array>

    <string-array name="version_state_description">
        <item>自测版本</item>
        <item>内测版本</item>
        <item>公测版本</item>
        <item>正式版本</item>
    </string-array>

    <string name="open_source_link">开源链接：https://github.com/zhangzhipeng651/TianTan</string>

    <string-array name="grades">
        <item>很不好</item>
        <item>不够好</item>
        <item>一般般</item>
        <item>还可以</item>
        <item>很不错</item>
        <item>棒！</item>
    </string-array>
    <string name="title_activity_score">得分结果</string>
    <string name="share">分享</string>
    <string name="return_">返回</string>
    <string name="exit">退出</string>
    <string name="confirm_exit">您确定要退出么？</string>
    <string name="okay">确定</string>
    <string name="cancel">取消</string>
    <string name="i_understand">我已理解</string>
    <string name="submit">提交</string>
    <string name="share_to">分享到</string>
    <string name="encounter_unknown_problem">抱歉，本软件遇到未知问题。</string>
    <string name="title_intro">天体介绍</string>
    <string name="no_settings_available">暂无设置可用。</string>
    <string name="date">日期</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="welcome">欢迎使用天探！</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="interval">间隔</string>
    <string name="ms">毫秒</string>
    <string name="not_show_again">不再提示</string>
    <string name="official_website">访问官网：https://zhangzhipeng651.github.io/tiantan/</string>
    <string name="download_page_url" translatable="false">https://github.com/zhangzhipeng651/TianTan/releases</string>
    <string name="latest_version_json_url" translatable="false">https://zhangzhipeng651.github.io/tiantan/latest_version.json</string>

    <string name="ask_if_user_not_finish_test">您有未做的题目，确定要提交么？</string>
    <string name="answering_time_length">答题时长：</string>
    <string name="score_detail">得分详情：</string>
    <string name="question_detail_text1">第</string>
    <string name="question_detail_text2">题：</string>
    <string name="question_detail_text3">题目：</string>
    <string name="question_detail_text4">正确选项：</string>
    <string name="question_detail_text5">您选了：</string>
    <string name="question_detail_text6">您未作答</string>

    <string name="check_for_updates">检查新版本</string>
    <string name="please_wait">请稍候</string>
    <string name="found_new_version">发现新版本</string>
    <string name="version_id">版本号：</string>
    <string name="version_description">版本描述：</string>
    <string name="open_link">打开链接</string>
    <string name="no_newer_version">没有更新版本。</string>
    <string name="check_internet_connection">无法连接网络。请检查您的网络连接。</string>
    <string name="network_error">网络错误：</string>

    <string name="pe_warn_title">使用此功能前须知</string>
    <string name="pe_warn_text">本功能不能精确表示行星位置。\n\n本程序在某些情况下会卡死。\n\n如果您在调快速度时发现明显卡顿，请立即调慢速度。\n\n如果无法显示太阳系示意图，请尝试在手机设置的开发者选项中将“强制进行GPU渲染”关闭。</string>
    <string name="speed">速度</string>
    <string name="slow">慢</string>
    <string name="fast">快</string>

</resources>