<?xml version="1.0" encoding="utf-8"?><!--
  ~ TianTan (天探)
  ~ Copyright (C) 2022  Astronomy Group, Class 1 Senior 1, Wujiang High School (吴江中学（原）高一（1）班天文小组)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#060f38"
    tools:context=".emulator.PlanetEmulatorActivity">

    <LinearLayout
        android:id="@+id/emulator_control_ctner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ccffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:text="@string/date"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/emulator_input_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:minWidth="70sp"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/emulator_input_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:minWidth="40sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/emulator_input_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:minWidth="40sp"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/emulator_btn_ok"
                android:layout_width="55sp"
                android:layout_height="45sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:maxWidth="1px"
                android:padding="0dp"
                android:text="@string/okay"
                android:textColor="@color/white"
                app:rippleColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:text="@string/speed"
                    android:layout_marginTop="5pt"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:text="@string/slow"
                    android:layout_marginTop="5pt"
                    android:textColor="@color/black" />

                <!--EditText
                    android:id="@+id/emulator_input_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:inputType="number"
                    android:minWidth="70sp"
                    android:textAlignment="textEnd"
                    android:maxLength="3" /-->
                <SeekBar
                    android:id="@+id/emulator_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:min="1"
                    android:max="1000"
                    android:progress="30"
                    android:layout_marginTop="5pt"
                    app:rippleColor="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast"
                    android:layout_marginRight="70dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5pt"/>
            </LinearLayout>

            <Button
                android:id="@+id/emulator_btn_start_pause"
                android:layout_width="55sp"
                android:layout_height="45sp"
                android:layout_alignParentRight="true"

                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:fontFamily="sans-serif-black"
                android:maxWidth="1px"
                android:padding="0dp"
                android:text="@string/start"
                app:rippleColor="@color/white"
                android:textColor="@color/white" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider" />
    </LinearLayout>

    <team.lightcloud.tiantan.emulator.PaintView
            android:id="@+id/emulator_paintview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/emulator_control_ctner"

    />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/emulator_sharebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/emulator_paintview"
        android:layout_alignBottom="@id/emulator_paintview"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:tooltipText="@string/share"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/ic_menu_share" />
</RelativeLayout>